# html-wasm-template

./: Cargo.toml  LICENSE  README.md  index.html  package.json
src/: lib.rs
