[package]
name = "placeholder_name_replace_me"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
bin-jsify = ["base64"]

[dependencies]
base64 = { version = "0.22.1", optional = true }
js-sys = "0.3.69"
sycamore = "0.8.2"
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.69"
features = []

[[bin]]
name = "jsify"
required-features = ["bin-jsify"]
